[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/hammer_t.png" type="Texture" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scripts/HUDsManager.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/images/exit_t.png" type="Texture" id=6]
[ext_resource path="res://assets/images/egg_t.png" type="Texture" id=7]
[ext_resource path="res://scripts/Ant.gd" type="Script" id=8]
[ext_resource path="res://scripts/RoomSelectHUD.gd" type="Script" id=9]
[ext_resource path="res://scenes/test scenes/Ant_TEST2.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/RoomAdmin.gd" type="Script" id=11]
[ext_resource path="res://scenes/AntSelect.gd" type="Script" id=12]
[ext_resource path="res://assets/images/pngfind.com-arrow-pointing-down-png-2133578.png" type="Texture" id=13]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="Theme" id=1]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Rooms" type="Node" parent="."]

[node name="Ants" type="Node" parent="."]

[node name="Ant_TEST" type="Node2D" parent="Ants"]
position = Vector2( 150, 50 )
script = ExtResource( 8 )
antName = "Egg"

[node name="Sprite" type="Sprite" parent="Ants/Ant_TEST"]
scale = Vector2( 0.0390625, 0.0390625 )
z_index = 1
texture = ExtResource( 7 )

[node name="LoiterTimer" type="Timer" parent="Ants/Ant_TEST"]
wait_time = 4.0
one_shot = true

[node name="Ant_TEST2" parent="Ants" instance=ExtResource( 10 )]
antName = "Bunny"

[node name="HUDsManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MainHUD" type="Control" parent="HUDsManager"]

[node name="ResourceOverview" type="Button" parent="HUDsManager/MainHUD"]
margin_right = 208.0
margin_bottom = 64.0

[node name="Sprite" type="Sprite" parent="HUDsManager/MainHUD/ResourceOverview"]
position = Vector2( 170, 30 )
scale = Vector2( 0.0499126, 0.045639 )
texture = ExtResource( 13 )

[node name="BuildButton" type="Button" parent="HUDsManager/MainHUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 912.0
margin_top = 8.0
margin_right = 976.0
margin_bottom = 72.0

[node name="Sprite" type="Sprite" parent="HUDsManager/MainHUD/BuildButton"]
position = Vector2( 32, 28 )
scale = Vector2( 0.0625, 0.0703125 )
texture = ExtResource( 2 )

[node name="RoomBuildControl" type="Control" parent="HUDsManager"]
visible = false
script = ExtResource( 9 )

[node name="RoomSelectBuildControl" type="Control" parent="HUDsManager/RoomBuildControl"]

[node name="CloseButton" type="Button" parent="HUDsManager/RoomBuildControl"]
margin_left = 896.0
margin_top = 8.0
margin_right = 960.0
margin_bottom = 72.0

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/CloseButton"]
position = Vector2( 32, 28 )
scale = Vector2( 0.0625, 0.0703125 )
texture = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="HUDsManager/RoomBuildControl"]
margin_left = 80.0
margin_top = 384.0
margin_right = 912.0
margin_bottom = 536.0
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="HUDsManager/RoomBuildControl/ScrollContainer"]
margin_right = 2890.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer"]
margin_right = 2362.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 20

[node name="FoodRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_right = 260.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FoodRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FoodRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 144.0
text = "Food

"

[node name="ElevatorRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 264.0
margin_right = 514.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ElevatorRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ElevatorRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 128.0
text = "Elevator
"

[node name="EnergyRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 518.0
margin_right = 778.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/EnergyRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/EnergyRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "Energy
"

[node name="ARoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 782.0
margin_right = 1042.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ARoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ARoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "A
"

[node name="BRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 1046.0
margin_right = 1306.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/BRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/BRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "B
"

[node name="CRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 1310.0
margin_right = 1570.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/CRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/CRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "C

"

[node name="DRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 1574.0
margin_right = 1834.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/DRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/DRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "D

"

[node name="ERoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 1838.0
margin_right = 2098.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ERoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ERoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "E

"

[node name="FRoomSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 2102.0
margin_right = 2362.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FRoomSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FRoomSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "F

"

[node name="StorageSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 2102.0
margin_right = 2362.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/StorageSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/StorageSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "Storage

"

[node name="MarketSelectButton" type="Button" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer"]
margin_left = 2102.0
margin_right = 2362.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 150 )

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/MarketSelectButton"]
position = Vector2( 136, 72 )
scale = Vector2( 4, 2.375 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/MarketSelectButton"]
margin_left = 16.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 128.0
text = "Market

"

[node name="RoomAdmin" type="Control" parent="HUDsManager"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )

[node name="Close Button" type="Button" parent="HUDsManager/RoomAdmin"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 64.0

[node name="Sprite" type="Sprite" parent="HUDsManager/RoomAdmin/Close Button"]
position = Vector2( 32, 32 )
scale = Vector2( 0.0585938, 0.0585938 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="HUDsManager/RoomAdmin"]
margin_left = 128.0
margin_top = 64.0
margin_right = 928.0
margin_bottom = 544.0

[node name="Fill Position 1" type="Button" parent="HUDsManager/RoomAdmin"]
margin_left = 224.0
margin_top = 96.0
margin_right = 352.0
margin_bottom = 152.0
text = "Fill Position 1"

[node name="Fill Position 2" type="Button" parent="HUDsManager/RoomAdmin"]
margin_left = 224.0
margin_top = 184.0
margin_right = 352.0
margin_bottom = 240.0
text = "Fill Position 2"

[node name="AntSelect" type="ScrollContainer" parent="HUDsManager/RoomAdmin"]
visible = false
modulate = Color( 1, 0.564706, 0.564706, 1 )
self_modulate = Color( 0.921569, 0.835294, 0.835294, 1 )
material = SubResource( 2 )
margin_left = 128.0
margin_top = 64.0
margin_right = 928.0
margin_bottom = 544.0
custom_styles/bg = SubResource( 3 )
scroll_horizontal_enabled = false
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUDsManager/RoomAdmin/AntSelect"]
modulate = Color( 0.6, 0.176471, 0.176471, 1 )
self_modulate = Color( 0.52549, 0.109804, 0.109804, 1 )
margin_right = 800.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="HUDsManager/RoomAdmin/AntSelect/VBoxContainer"]
margin_right = 800.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResourceOverview" type="Control" parent="HUDsManager"]
visible = false
margin_left = 8.0
margin_top = 70.0
margin_right = 632.0
margin_bottom = 529.0

[node name="ABar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_right = 128.0
margin_bottom = 14.0
percent_visible = false

[node name="BBar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_top = 34.0
margin_right = 128.0
margin_bottom = 48.0
percent_visible = false

[node name="CBar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_top = 74.0
margin_right = 128.0
margin_bottom = 88.0
percent_visible = false

[node name="DBar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_top = 122.0
margin_right = 128.0
margin_bottom = 136.0
percent_visible = false

[node name="EBar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_top = 170.0
margin_right = 128.0
margin_bottom = 184.0
percent_visible = false

[node name="FBar" type="ProgressBar" parent="HUDsManager/ResourceOverview"]
margin_top = 218.0
margin_right = 128.0
margin_bottom = 232.0
percent_visible = false

[node name="CloseButton" type="Button" parent="HUDsManager/ResourceOverview"]
margin_left = 954.0
margin_top = -62.0
margin_right = 1014.0
margin_bottom = 2.0

[node name="Sprite" type="Sprite" parent="HUDsManager/ResourceOverview/CloseButton"]
position = Vector2( 32, 28 )
scale = Vector2( 0.0625, 0.0703125 )
texture = ExtResource( 6 )

[node name="FoodEnergyBars" type="Control" parent="HUDsManager"]
margin_right = 40.0
margin_bottom = 40.0

[node name="FoodBar" type="ProgressBar" parent="HUDsManager/FoodEnergyBars"]
margin_left = 8.0
margin_top = 24.0
margin_right = 136.0
margin_bottom = 38.0
percent_visible = false

[node name="EnergyBar" type="ProgressBar" parent="HUDsManager/FoodEnergyBars"]
margin_left = 8.0
margin_top = 40.0
margin_right = 136.0
margin_bottom = 54.0
percent_visible = false

[node name="Funds" type="Label" parent="HUDsManager/FoodEnergyBars"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
text = "$ 0"

[connection signal="timeout" from="Ants/Ant_TEST/LoiterTimer" to="Ants/Ant_TEST" method="_on_LoiterTimer_timeout"]
[connection signal="button_up" from="HUDsManager/MainHUD/ResourceOverview" to="HUDsManager" method="_on_ResourceOverview_button_up"]
[connection signal="button_up" from="HUDsManager/MainHUD/BuildButton" to="HUDsManager" method="_on_BuildButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/CloseButton" to="HUDsManager/RoomBuildControl" method="_on_CloseButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FoodRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_FoodRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ElevatorRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_ElevatorRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/EnergyRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_EnergyRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ARoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_ARoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/BRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_BRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/CRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_CRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/DRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_DRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/ERoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_ERoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/FRoomSelectButton" to="HUDsManager/RoomBuildControl" method="_on_FRoomSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/StorageSelectButton" to="HUDsManager/RoomBuildControl" method="_on_StorageSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomBuildControl/ScrollContainer/HBoxContainer/GridContainer/MarketSelectButton" to="HUDsManager/RoomBuildControl" method="_on_MarketSelectButton_button_up"]
[connection signal="button_up" from="HUDsManager/RoomAdmin/Close Button" to="HUDsManager" method="closeRoomAdmin"]
[connection signal="button_up" from="HUDsManager/RoomAdmin/Fill Position 1" to="HUDsManager/RoomAdmin" method="_on_Fill_Position_1_button_up"]
[connection signal="button_up" from="HUDsManager/RoomAdmin/Fill Position 2" to="HUDsManager/RoomAdmin" method="_on_Fill_Position_2_button_up"]
[connection signal="button_up" from="HUDsManager/ResourceOverview/CloseButton" to="HUDsManager" method="closeResourceOverview"]
